--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#demo" class="btn-secondary">Try Demo</a>
                 <a href="#register" class="btn-primary">Get Started</a>
             </div>
-            <div class="hamburger" id="hamburger">
+            <div class="hamburger" id="hamburger" role="button" tabindex="0" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
                 <span></span>
                 <span></span>
